<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232834"
    tools:context=".MainActivity">

    <!-- Logo Circle Background -->
    <ImageView
        android:id="@+id/logo_bg"
        android:layout_width="177dp"
        android:layout_height="187dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/bg_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <!-- Logo ImageView -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="97dp"
        android:layout_height="111dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.217"
        tools:ignore="ImageContrastCheck" />

    <!-- First Name TextView -->
    <TextView
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/poppins_black"
        android:text="@string/first_name"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <!-- Last Name TextView -->
    <TextView
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/last_name"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <!-- Line Separator -->
    <View
        android:id="@+id/lineSeparator"
        android:layout_width="200dp"
        android:layout_height="2dp"
        android:layout_marginTop="2dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName" />

    <!-- Title TextView -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/poppins_italic"
        android:text="@string/title"
        android:textAllCaps="true"
        android:textColor="#7cbb33"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineSeparator" />

    <!-- Contact Information -->
    <LinearLayout
        android:layout_width="346dp"
        android:layout_height="227dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.432">

        <!-- Phone -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_rectangle_green"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/phone_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/icon"
                android:src="@drawable/phone" />

            <TextView
                android:id="@+id/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/number"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <!-- Email -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_rectangle_white"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/email_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/icon"
                android:src="@drawable/mail" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <!-- Socials -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rectangle_green"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/socials_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/icon"
                android:src="@drawable/socials" />

            <TextView
                android:id="@+id/socials"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/socials"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>